--- a/basicamt/train_basicamt2.ipynb
+++ b/basicamt/train_basicamt2.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import os\n",
@@ -35,22 +27,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "训练集大小:  8316\n",
-      "输入大小:  torch.Size([1, 1, 230400])\n",
-      "输出大小:  torch.Size([1, 84, 900])\n",
-      "测试集大小:  720\n",
-      "输入大小:  torch.Size([1, 1, 230400])\n",
-      "输出大小:  torch.Size([1, 84, 900])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from data.data import Instruments\n",
+    "from data.septimbre import Instruments\n",
     "dataset = Instruments(\n",
     "    folder = '../data/multi_large_256',\n",
     "    mix = 1,\n",
@@ -86,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checkpoint file 'basicamt_all.pth' does not exist.\n",
-      "No checkpoint loaded. Training from scratch.\n"
+      "Checkpoint loaded from 'basicamt_all.pth'\n",
+      "epoch: 59, loss: 3293.635726342139, min_loss: 3288.4482824845745\n"
      ]
     }
    ],
@@ -1051,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1130,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "test_wave_path = \"data/inferMusic/piano_short.wav\"\n",
+    "test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
     "waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
@@ -1173,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "amt",
    "language": "python",
    "name": "python3"
   },
