把最大值归一化放入导出的模型中

--- a/basicamt/use_model.ipynb
+++ b/basicamt/use_model.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\wind\\AppData\\Local\\Temp\\ipykernel_14468\\4067002302.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model = torch.load(\"basicamt_model.pth\", map_location=torch.device('cpu'))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import sys\n",
@@ -198,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,9 +248,9 @@
     "    onset, note = model_44100(waveform)\n",
     "    onset = onset.cpu().numpy()[0]\n",
     "    note = note.cpu().numpy()[0]\n",
-    "    # 归一化\n",
-    "    note = note / np.max(note)\n",
-    "    onset = onset / np.max(onset)\n",
+    "    # 归一化（包含在模型内部）\n",
+    "    # note = note / np.max(note)\n",
+    "    # onset = onset / np.max(onset)\n",
     "\n",
     "if midi_array is None:\n",
     "    plot_num = 2\n",
@@ -287,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -369,10 +360,14 @@
     "import onnxruntime as ort\n",
     "import numpy as np\n",
     "import torchaudio\n",
+    "import os\n",
     "\n",
     "ort_session = ort.InferenceSession(\"basicamt_44100.onnx\") # 创建一个推理session\n",
     "\n",
-    "waveform, sample_rate = torchaudio.load(\"D:/Music/加藤達也-Always in my heart.mp3\", normalize=True)\n",
+    "input_wav_path = \"D:/Music/加藤達也-Always in my heart.mp3\"\n",
+    "waveform, sample_rate = torchaudio.load(input_wav_path, normalize=True)\n",
+    "audio_name = os.path.basename(input_wav_path).split('.')[0]\n",
+    "\n",
     "waveform = waveform.unsqueeze(0).cpu()\n",
     "if waveform.shape[1] > 1:\n",
     "    waveform = waveform.mean(1, keepdim=True)\n",
@@ -381,8 +376,8 @@
     "outputs = ort_session.run(None, {'audio': waveform})\n",
     "onset = outputs[0][0]\n",
     "note = outputs[1][0]\n",
-    "onset = onset / np.max(onset)\n",
-    "note = note / np.max(note)\n",
+    "# onset = onset / np.max(onset)\n",
+    "# note = note / np.max(note)\n",
     "\n",
     "plt.figure(figsize=(12, 10))\n",
     "plt.subplot(2, 1, 1)\n",
