--- a/evaluate/eval_basicamt.ipynb
+++ b/evaluate/eval_basicamt.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,12 +208,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../basicamt')\n",
-    "model = torch.load(\"../basicamt/basicamt_model.pth\")\n",
-    "model.eval()\n",
+    "model_folder_name = \"tiny\"\n",
+    "sys.path.append(f'../{model_folder_name}')\n",
+    "model = torch.load(f\"../{model_folder_name}/basicamt_model.pth\")\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 得到所有运行结果\n",
     "with torch.no_grad():\n",
     "    for dataset_folder in dataset_folders:\n",
-    "        amt_dataset(model, dataset_folder, \"./basicamt\")"
+    "        amt_dataset(model, dataset_folder, f\"./{model_folder_name}\")"
    ]
   },
   {
@@ -230,7 +240,7 @@
    "outputs": [],
    "source": [
     "# 只看BACH10的合奏结果\n",
-    "npyfolder = \"basicamt/BACH10_eval\"\n",
+    "npyfolder = f\"{model_folder_name}/BACH10_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\"0.npy\")]\n",
     "find_best_threshold(npys, (0.1, 0.5), step_num=10, generation=4, log=True)"
    ]
@@ -239,31 +249,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- BACH10的合奏: Best threshold: 0.14224, F1: 0.7962386620882139\n",
+    "- BACH10合奏：Best threshold: 0.15312, F1: 0.8029144908856092\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.10000 | 0.64832 | 0.73652 | 0.84408 | 0.78628 |\n",
-    "| 0.14000 | 0.66175 | 0.79144 | 0.80163 | 0.79614 |\n",
-    "| 0.18000 | 0.65707 | 0.82674 | 0.76222 | 0.79281 |\n",
-    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7961447685583972 |\n",
-    "| 0.10800 | 0.65361 | 0.75003 | 0.83557 | 0.79017 |\n",
-    "| 0.11600 | 0.65786 | 0.76242 | 0.82750 | 0.79330 |\n",
-    "| 0.12400 | 0.66064 | 0.77375 | 0.81891 | 0.79532 |\n",
-    "| 0.13200 | 0.66135 | 0.78300 | 0.80993 | 0.79586 |\n",
-    "| 0.14000 | 0.66175 | 0.79144 | 0.80163 | 0.79614 |\n",
-    "| 0.14800 | 0.66180 | 0.79972 | 0.79342 | 0.79620 |\n",
-    "| 0.15600 | 0.66103 | 0.80714 | 0.78518 | 0.79566 |\n",
-    "| Best threshold | 0.148 | ~ | ~ | F1: 0.7961999935719664 |\n",
-    "| 0.14160 | 0.66176 | 0.79300 | 0.80005 | 0.79616 |\n",
-    "| 0.14320 | 0.66167 | 0.79462 | 0.79829 | 0.79609 |\n",
-    "| Best threshold | 0.1416 | ~ | ~ | F1: 0.7961552781664798 |\n",
-    "| 0.14176 | 0.66175 | 0.79316 | 0.79987 | 0.79615 |\n",
-    "| 0.14192 | 0.66178 | 0.79340 | 0.79968 | 0.79617 |\n",
-    "| 0.14208 | 0.66180 | 0.79353 | 0.79957 | 0.79618 |\n",
-    "| 0.14224 | 0.66188 | 0.79374 | 0.79947 | 0.79624 |\n",
-    "| 0.14240 | 0.66182 | 0.79388 | 0.79926 | 0.79620 |\n",
-    "| Best threshold | 0.14224 | ~ | ~ | F1: 0.7962386620882139 |"
+    "| 0.10000 | 0.65786 | 0.73881 | 0.85705 | 0.79322 |\n",
+    "| 0.14000 | 0.67115 | 0.79435 | 0.81210 | 0.80279 |\n",
+    "| 0.18000 | 0.66741 | 0.83337 | 0.76996 | 0.80009 |\n",
+    "| Best threshold | 0.14 | ~ | ~ | F1: 0.8027928864331081 |\n",
+    "| 0.10800 | 0.66312 | 0.75257 | 0.84787 | 0.79704 |\n",
+    "| 0.11600 | 0.66638 | 0.76456 | 0.83826 | 0.79938 |\n",
+    "| 0.12400 | 0.66885 | 0.77563 | 0.82911 | 0.80116 |\n",
+    "| 0.13200 | 0.67041 | 0.78556 | 0.82038 | 0.80227 |\n",
+    "| 0.14000 | 0.67115 | 0.79435 | 0.81210 | 0.80279 |\n",
+    "| 0.14800 | 0.67121 | 0.80310 | 0.80322 | 0.80283 |\n",
+    "| 0.15600 | 0.67129 | 0.81163 | 0.79494 | 0.80287 |\n",
+    "| 0.16400 | 0.67049 | 0.81933 | 0.78658 | 0.80230 |\n",
+    "| Best threshold | 0.156 | ~ | ~ | F1: 0.8028732920285189 |\n",
+    "| 0.14960 | 0.67106 | 0.80460 | 0.80150 | 0.80271 |\n",
+    "| 0.15120 | 0.67132 | 0.80669 | 0.79979 | 0.80289 |\n",
+    "| 0.15280 | 0.67140 | 0.80843 | 0.79821 | 0.80295 |\n",
+    "| 0.15440 | 0.67143 | 0.81007 | 0.79664 | 0.80297 |\n",
+    "| 0.15600 | 0.67129 | 0.81163 | 0.79494 | 0.80287 |\n",
+    "| Best threshold | 0.1544 | ~ | ~ | F1: 0.8029676127610162 |\n",
+    "| 0.15312 | 0.67135 | 0.80869 | 0.79789 | 0.80291 |\n",
+    "| 0.15344 | 0.67135 | 0.80907 | 0.79752 | 0.80291 |\n",
+    "| Best threshold | 0.15312 | ~ | ~ | F1: 0.8029144908856092 |"
    ]
   },
   {
@@ -273,46 +284,43 @@
    "outputs": [],
    "source": [
     "# 看BACH10所有音频的结果（独奏+合奏）\n",
-    "npyfolder = \"basicamt/BACH10_eval\"\n",
+    "npyfolder = f\"{model_folder_name}/BACH10_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\".npy\")]\n",
-    "find_best_threshold(npys, (0.1, 0.7), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.25, 0.7), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- BACH10所有音频: Best threshold: 0.29728, F1: 0.8550319205664922\n",
+    "- BACH10所有音频：Best threshold: 0.30184, F1: 0.860866334491572\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.10000 | 0.67358 | 0.71401 | 0.92169 | 0.79670 |\n",
-    "| 0.16000 | 0.72860 | 0.79166 | 0.90021 | 0.83610 |\n",
-    "| 0.22000 | 0.75024 | 0.83295 | 0.88194 | 0.85058 |\n",
-    "| 0.28000 | 0.75735 | 0.85808 | 0.86499 | 0.85482 |\n",
-    "| 0.34000 | 0.75803 | 0.87536 | 0.84937 | 0.85451 |\n",
-    "| Best threshold | 0.28 | ~ | ~ | F1: 0.854823299821161 |\n",
-    "| 0.23200 | 0.75219 | 0.83847 | 0.87851 | 0.85181 |\n",
-    "| 0.24400 | 0.75433 | 0.84439 | 0.87501 | 0.85315 |\n",
-    "| 0.25600 | 0.75561 | 0.84935 | 0.87151 | 0.85389 |\n",
-    "| 0.26800 | 0.75650 | 0.85366 | 0.86827 | 0.85436 |\n",
-    "| 0.28000 | 0.75735 | 0.85808 | 0.86499 | 0.85482 |\n",
-    "| 0.29200 | 0.75766 | 0.86176 | 0.86175 | 0.85486 |\n",
-    "| 0.30400 | 0.75804 | 0.86545 | 0.85874 | 0.85500 |\n",
-    "| 0.31600 | 0.75822 | 0.86894 | 0.85562 | 0.85495 |\n",
-    "| Best threshold | 0.304 | ~ | ~ | F1: 0.8549980720124114 |\n",
-    "| 0.29440 | 0.75786 | 0.86261 | 0.86120 | 0.85497 |\n",
-    "| 0.29680 | 0.75796 | 0.86342 | 0.86055 | 0.85502 |\n",
-    "| 0.29920 | 0.75795 | 0.86408 | 0.85991 | 0.85500 |\n",
-    "| Best threshold | 0.2968 | ~ | ~ | F1: 0.8550222647514515 |\n",
-    "| 0.29488 | 0.75788 | 0.86278 | 0.86107 | 0.85499 |\n",
-    "| 0.29536 | 0.75789 | 0.86293 | 0.86095 | 0.85499 |\n",
-    "| 0.29584 | 0.75790 | 0.86306 | 0.86083 | 0.85499 |\n",
-    "| 0.29632 | 0.75792 | 0.86323 | 0.86069 | 0.85500 |\n",
-    "| 0.29680 | 0.75796 | 0.86342 | 0.86055 | 0.85502 |\n",
-    "| 0.29728 | 0.75797 | 0.86354 | 0.86045 | 0.85503 |\n",
-    "| 0.29776 | 0.75797 | 0.86367 | 0.86032 | 0.85503 |\n",
-    "| Best threshold | 0.29728 | ~ | ~ | F1: 0.8550319205664922 |"
+    "| 0.25000 | 0.76245 | 0.85539 | 0.87324 | 0.85901 |\n",
+    "| 0.29500 | 0.76551 | 0.87300 | 0.85966 | 0.86057 |\n",
+    "| 0.34000 | 0.76596 | 0.88729 | 0.84707 | 0.86016 |\n",
+    "| Best threshold | 0.295 | ~ | ~ | F1: 0.8605656078947697 |\n",
+    "| 0.25900 | 0.76346 | 0.85948 | 0.87029 | 0.85960 |\n",
+    "| 0.26800 | 0.76413 | 0.86317 | 0.86742 | 0.85994 |\n",
+    "| 0.27700 | 0.76489 | 0.86684 | 0.86475 | 0.86034 |\n",
+    "| 0.28600 | 0.76519 | 0.87000 | 0.86209 | 0.86045 |\n",
+    "| 0.29500 | 0.76551 | 0.87300 | 0.85966 | 0.86057 |\n",
+    "| 0.30400 | 0.76600 | 0.87632 | 0.85706 | 0.86076 |\n",
+    "| 0.31300 | 0.76596 | 0.87897 | 0.85461 | 0.86063 |\n",
+    "| Best threshold | 0.304 | ~ | ~ | F1: 0.8607566451715536 |\n",
+    "| 0.29680 | 0.76568 | 0.87378 | 0.85911 | 0.86065 |\n",
+    "| 0.29860 | 0.76592 | 0.87459 | 0.85863 | 0.86079 |\n",
+    "| 0.30040 | 0.76603 | 0.87520 | 0.85816 | 0.86083 |\n",
+    "| 0.30220 | 0.76609 | 0.87580 | 0.85766 | 0.86084 |\n",
+    "| 0.30400 | 0.76600 | 0.87632 | 0.85706 | 0.86076 |\n",
+    "| Best threshold | 0.3022 | ~ | ~ | F1: 0.8608435176278999 |\n",
+    "| 0.30076 | 0.76607 | 0.87536 | 0.85805 | 0.86085 |\n",
+    "| 0.30112 | 0.76608 | 0.87547 | 0.85795 | 0.86085 |\n",
+    "| 0.30148 | 0.76610 | 0.87559 | 0.85787 | 0.86086 |\n",
+    "| 0.30184 | 0.76612 | 0.87571 | 0.85777 | 0.86087 |\n",
+    "| 0.30220 | 0.76609 | 0.87580 | 0.85766 | 0.86084 |\n",
+    "| Best threshold | 0.30184 | ~ | ~ | F1: 0.860866334491572 |"
    ]
   },
   {
@@ -322,40 +330,41 @@
    "outputs": [],
    "source": [
     "# 看PHENICX合奏音频的结果\n",
-    "npyfolder = \"basicamt/PHENICX_eval\"\n",
+    "npyfolder = f\"{model_folder_name}/PHENICX_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\".npy\")]\n",
-    "find_best_threshold(npys, (0.01, 0.3), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.02, 0.2), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- PHENICX合奏: Best threshold: 0.059416, F1: 0.6014269470574202\n",
+    "- PHENICX合奏：Best threshold: 0.06464, F1: 0.5951196104555911\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.01000 | 0.21776 | 0.22678 | 0.84575 | 0.35745 |\n",
-    "| 0.03900 | 0.40028 | 0.49052 | 0.68578 | 0.57129 |\n",
-    "| 0.06800 | 0.43015 | 0.60474 | 0.59709 | 0.60011 |\n",
-    "| 0.09700 | 0.41780 | 0.65481 | 0.53374 | 0.58724 |\n",
-    "| Best threshold | 0.068 | ~ | ~ | F1: 0.6001100338083282 |\n",
-    "| 0.04480 | 0.42036 | 0.53312 | 0.66540 | 0.59123 |\n",
-    "| 0.05060 | 0.42773 | 0.55813 | 0.64650 | 0.59831 |\n",
-    "| 0.05640 | 0.43032 | 0.57620 | 0.62899 | 0.60066 |\n",
-    "| 0.06220 | 0.43121 | 0.59188 | 0.61271 | 0.60134 |\n",
-    "| 0.06800 | 0.43015 | 0.60474 | 0.59709 | 0.60011 |\n",
-    "| Best threshold | 0.0622 | ~ | ~ | F1: 0.6013360502611242 |\n",
-    "| 0.05756 | 0.43076 | 0.57970 | 0.62572 | 0.60106 |\n",
-    "| 0.05872 | 0.43106 | 0.58294 | 0.62253 | 0.60131 |\n",
-    "| 0.05988 | 0.43121 | 0.58609 | 0.61924 | 0.60142 |\n",
-    "| 0.06104 | 0.43110 | 0.58890 | 0.61582 | 0.60127 |\n",
-    "| Best threshold | 0.05988 | ~ | ~ | F1: 0.6014200578203976 |\n",
-    "| 0.05895 | 0.43112 | 0.58355 | 0.62196 | 0.60136 |\n",
-    "| 0.05918 | 0.43119 | 0.58425 | 0.62131 | 0.60143 |\n",
-    "| 0.05942 | 0.43120 | 0.58486 | 0.62062 | 0.60143 |\n",
-    "| 0.05965 | 0.43116 | 0.58542 | 0.61990 | 0.60138 |\n",
-    "| Best threshold | 0.059416 | ~ | ~ | F1: 0.6014269470574202 |"
+    "| 0.02000 | 0.29774 | 0.32434 | 0.78537 | 0.45879 |\n",
+    "| 0.03800 | 0.39485 | 0.47775 | 0.69539 | 0.56579 |\n",
+    "| 0.05600 | 0.42212 | 0.56043 | 0.63020 | 0.59276 |\n",
+    "| 0.07400 | 0.42333 | 0.60922 | 0.57939 | 0.59346 |\n",
+    "| 0.09200 | 0.41475 | 0.64209 | 0.53722 | 0.58452 |\n",
+    "| Best threshold | 0.074 | ~ | ~ | F1: 0.59346064026473 |\n",
+    "| 0.05960 | 0.42356 | 0.57159 | 0.61946 | 0.59407 |\n",
+    "| 0.06320 | 0.42446 | 0.58208 | 0.60926 | 0.59487 |\n",
+    "| 0.06680 | 0.42493 | 0.59219 | 0.59927 | 0.59523 |\n",
+    "| 0.07040 | 0.42455 | 0.60131 | 0.58927 | 0.59476 |\n",
+    "| Best threshold | 0.0668 | ~ | ~ | F1: 0.5952275971754704 |\n",
+    "| 0.06392 | 0.42458 | 0.58414 | 0.60720 | 0.59496 |\n",
+    "| 0.06464 | 0.42476 | 0.58628 | 0.60524 | 0.59512 |\n",
+    "| 0.06536 | 0.42478 | 0.58829 | 0.60309 | 0.59511 |\n",
+    "| Best threshold | 0.06464 | ~ | ~ | F1: 0.5951196104555911 |\n",
+    "| 0.06406 | 0.42460 | 0.58457 | 0.60677 | 0.59498 |\n",
+    "| 0.06421 | 0.42468 | 0.58503 | 0.60642 | 0.59505 |\n",
+    "| 0.06435 | 0.42471 | 0.58546 | 0.60602 | 0.59507 |\n",
+    "| 0.06450 | 0.42471 | 0.58588 | 0.60558 | 0.59507 |\n",
+    "| 0.06464 | 0.42476 | 0.58628 | 0.60524 | 0.59512 |\n",
+    "| 0.06478 | 0.42473 | 0.58663 | 0.60479 | 0.59509 |\n",
+    "| Best threshold | 0.06464 | ~ | ~ | F1: 0.5951196104555911 |"
    ]
   },
   {
@@ -365,39 +374,43 @@
    "outputs": [],
    "source": [
     "# 只看URMP的合奏结果\n",
-    "npyfolder = \"basicamt/URMP_eval\"\n",
+    "npyfolder = f\"{model_folder_name}/URMP_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\"0.npy\")]\n",
-    "find_best_threshold(npys, (0.05, 0.5), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.1, 0.5), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- URMP的合奏: Best threshold: 0.12632, F1: 0.7297977379242105\n",
+    "- URMP合奏：Best threshold: 0.1384, F1: 0.7232317124904409\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.05000 | 0.50216 | 0.56511 | 0.81476 | 0.66458 |\n",
-    "| 0.09500 | 0.57162 | 0.70343 | 0.74968 | 0.72360 |\n",
-    "| 0.14000 | 0.57882 | 0.76295 | 0.70303 | 0.72920 |\n",
-    "| 0.18500 | 0.57076 | 0.79811 | 0.66499 | 0.72230 |\n",
-    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7292048718603422 |\n",
-    "| 0.10400 | 0.57553 | 0.71885 | 0.73940 | 0.72675 |\n",
-    "| 0.11300 | 0.57778 | 0.73203 | 0.72956 | 0.72851 |\n",
-    "| 0.12200 | 0.57914 | 0.74378 | 0.72044 | 0.72956 |\n",
-    "| 0.13100 | 0.57943 | 0.75406 | 0.71159 | 0.72976 |\n",
-    "| 0.14000 | 0.57882 | 0.76295 | 0.70303 | 0.72920 |\n",
-    "| Best threshold | 0.131 | ~ | ~ | F1: 0.7297645740182008 |\n",
-    "| 0.12380 | 0.57931 | 0.74594 | 0.71867 | 0.72968 |\n",
-    "| 0.12560 | 0.57939 | 0.74811 | 0.71682 | 0.72973 |\n",
-    "| 0.12740 | 0.57947 | 0.75013 | 0.71513 | 0.72980 |\n",
-    "| 0.12920 | 0.57947 | 0.75214 | 0.71332 | 0.72979 |\n",
-    "| Best threshold | 0.1274 | ~ | ~ | F1: 0.7298005275017999 |\n",
-    "| 0.12596 | 0.57945 | 0.74853 | 0.71652 | 0.72978 |\n",
-    "| 0.12632 | 0.57947 | 0.74894 | 0.71619 | 0.72980 |\n",
-    "| 0.12668 | 0.57945 | 0.74933 | 0.71582 | 0.72978 |\n",
-    "| Best threshold | 0.12632 | ~ | ~ | F1: 0.7297977379242105 |"
+    "| 0.10000 | 0.56187 | 0.69005 | 0.74933 | 0.71611 |\n",
+    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
+    "| 0.18000 | 0.56544 | 0.78914 | 0.66436 | 0.71812 |\n",
+    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7230835170006764 |\n",
+    "| 0.10800 | 0.56556 | 0.70472 | 0.73898 | 0.71910 |\n",
+    "| 0.11600 | 0.56809 | 0.71771 | 0.72932 | 0.72110 |\n",
+    "| 0.12400 | 0.56992 | 0.72978 | 0.72017 | 0.72251 |\n",
+    "| 0.13200 | 0.57070 | 0.74045 | 0.71125 | 0.72306 |\n",
+    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
+    "| 0.14800 | 0.57055 | 0.75937 | 0.69436 | 0.72273 |\n",
+    "| Best threshold | 0.14 | ~ | ~ | F1: 0.7230835170006764 |\n",
+    "| 0.13360 | 0.57087 | 0.74258 | 0.70955 | 0.72317 |\n",
+    "| 0.13520 | 0.57090 | 0.74460 | 0.70776 | 0.72317 |\n",
+    "| 0.13680 | 0.57095 | 0.74659 | 0.70604 | 0.72319 |\n",
+    "| 0.13840 | 0.57102 | 0.74857 | 0.70437 | 0.72323 |\n",
+    "| 0.14000 | 0.57086 | 0.75036 | 0.70254 | 0.72308 |\n",
+    "| Best threshold | 0.1384 | ~ | ~ | F1: 0.7232317124904409 |\n",
+    "| 0.13712 | 0.57094 | 0.74699 | 0.70566 | 0.72318 |\n",
+    "| 0.13744 | 0.57095 | 0.74736 | 0.70534 | 0.72318 |\n",
+    "| 0.13776 | 0.57095 | 0.74772 | 0.70503 | 0.72318 |\n",
+    "| 0.13808 | 0.57097 | 0.74812 | 0.70470 | 0.72320 |\n",
+    "| 0.13840 | 0.57102 | 0.74857 | 0.70437 | 0.72323 |\n",
+    "| 0.13872 | 0.57099 | 0.74893 | 0.70402 | 0.72320 |\n",
+    "| Best threshold | 0.1384 | ~ | ~ | F1: 0.7232317124904409 |"
    ]
   },
   {
@@ -407,67 +420,54 @@
    "outputs": [],
    "source": [
     "# 只看URMP的独奏结果\n",
-    "npyfolder = \"basicamt/URMP_eval\"\n",
+    "npyfolder = f\"{model_folder_name}/URMP_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if not f.endswith(\"0.npy\")]\n",
-    "find_best_threshold(npys, (0.05, 0.5), step_num=10, generation=4, log=True)"
+    "find_best_threshold(npys, (0.35, 0.5), step_num=10, generation=4, log=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- URMP的独奏: Best threshold: 0.34268, F1: 0.8084040173010774\n",
+    "- URMP的独奏：Best threshold: 0.3518, F1: 0.8055191663063108\n",
     "\n",
     "| threshold | Acc | P | R | F1 |\n",
     "| --------- | --- |---|---|----|\n",
-    "| 0.05000 | 0.42883 | 0.45577 | 0.88274 | 0.59044 |\n",
-    "| 0.09500 | 0.57598 | 0.63627 | 0.85576 | 0.72139 |\n",
-    "| 0.14000 | 0.63258 | 0.71822 | 0.83655 | 0.76641 |\n",
-    "| 0.18500 | 0.66138 | 0.76817 | 0.82096 | 0.78825 |\n",
-    "| 0.23000 | 0.67659 | 0.80193 | 0.80714 | 0.79941 |\n",
-    "| 0.27500 | 0.68468 | 0.82680 | 0.79459 | 0.80516 |\n",
-    "| 0.32000 | 0.68876 | 0.84700 | 0.78246 | 0.80792 |\n",
-    "| 0.36500 | 0.68952 | 0.86298 | 0.77077 | 0.80827 |\n",
-    "| 0.41000 | 0.68773 | 0.87553 | 0.75920 | 0.80674 |\n",
-    "| Best threshold | 0.365 | ~ | ~ | F1: 0.8082664075250976 |\n",
-    "| 0.32900 | 0.68929 | 0.85063 | 0.78017 | 0.80826 |\n",
-    "| 0.33800 | 0.68947 | 0.85394 | 0.77774 | 0.80836 |\n",
-    "| 0.34700 | 0.68954 | 0.85712 | 0.77532 | 0.80837 |\n",
-    "| 0.35600 | 0.68952 | 0.86014 | 0.77294 | 0.80830 |\n",
-    "| Best threshold | 0.347 | ~ | ~ | F1: 0.8083715965125569 |\n",
-    "| 0.33980 | 0.68946 | 0.85458 | 0.77723 | 0.80834 |\n",
-    "| 0.34160 | 0.68951 | 0.85529 | 0.77674 | 0.80836 |\n",
-    "| 0.34340 | 0.68954 | 0.85593 | 0.77627 | 0.80839 |\n",
-    "| 0.34520 | 0.68953 | 0.85653 | 0.77579 | 0.80838 |\n",
-    "| Best threshold | 0.3434 | ~ | ~ | F1: 0.8083862848260331 |\n",
-    "| 0.34196 | 0.68951 | 0.85546 | 0.77663 | 0.80837 |\n",
-    "| 0.34232 | 0.68954 | 0.85559 | 0.77655 | 0.80839 |\n",
-    "| 0.34268 | 0.68957 | 0.85574 | 0.77646 | 0.80840 |\n",
-    "| 0.34304 | 0.68955 | 0.85583 | 0.77638 | 0.80839 |\n",
-    "| Best threshold | 0.34268 | ~ | ~ | F1: 0.8084040173010774 |"
+    "| 0.35000 | 0.68625 | 0.85725 | 0.77045 | 0.80550 |\n",
+    "| 0.36500 | 0.68616 | 0.86241 | 0.76626 | 0.80536 |\n",
+    "| Best threshold | 0.35 | ~ | ~ | F1: 0.8054999270748892 |\n",
+    "| 0.35150 | 0.68634 | 0.85782 | 0.77008 | 0.80555 |\n",
+    "| 0.35300 | 0.68635 | 0.85831 | 0.76971 | 0.80556 |\n",
+    "| 0.35450 | 0.68632 | 0.85888 | 0.76926 | 0.80553 |\n",
+    "| Best threshold | 0.353 | ~ | ~ | F1: 0.8055610835598012 |\n",
+    "| 0.35180 | 0.68630 | 0.85788 | 0.76998 | 0.80552 |\n",
+    "| 0.35210 | 0.68630 | 0.85796 | 0.76992 | 0.80552 |\n",
+    "| Best threshold | 0.3518 | ~ | ~ | F1: 0.8055191663063108 |\n",
+    "| 0.35183 | 0.68630 | 0.85788 | 0.76998 | 0.80552 |\n",
+    "| 0.35186 | 0.68630 | 0.85789 | 0.76997 | 0.80552 |\n",
+    "| Best threshold | 0.3518 | ~ | ~ | F1: 0.8055191663063108 |"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "19944"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19944\n",
+      "46564\n"
+     ]
     }
    ],
    "source": [
     "# 输出参数数量\n",
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "count_parameters(model.cqt)"
+    "print(count_parameters(model.cqt))\n",
+    "print(count_parameters(model))"
    ]
   }
  ],
