增加MIDI通道画图代码

--- a/septimbre/use_model.ipynb
+++ b/septimbre/use_model.ipynb
@@ -14,6 +14,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.patches import Patch\n",
+    "from utils.midiarray import midi2numpy\n",
+    "\n",
+    "def draw_midi_with_channel(ax, midiarr, colors=['Reds', 'Blues'], labels=['Piano', 'Violin']):\n",
+    "    \"\"\"\n",
+    "    用不同颜色绘制midiarray\n",
+    "    ax: 通常是plt的subplot的一张图\n",
+    "    midiarr: 3D numpy array, shape = (n_channel, n_time, n_pitch) 或者midi路径\n",
+    "    colors: 颜色列表，名字需要和plt.cm中的颜色一致\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 从文件打开midi\n",
+    "    if isinstance(midiarr, str):\n",
+    "        midiarr = midi2numpy(midiarr, s_per_frame, track_separate=True)\n",
+    "        if len(midiarr.shape) != 3:\n",
+    "            raise ValueError(\"midiarr must be a 3D numpy array\")\n",
+    "\n",
+    "    Colors = [plt.get_cmap(color) if isinstance(color, str) else color for color in colors]\n",
+    "    # 白色背景\n",
+    "    background = np.ones_like(midiarr[0])\n",
+    "    ax.imshow(background, cmap='gray_r', aspect='auto', origin='lower')\n",
+    "\n",
+    "    for i, ch in enumerate(midiarr):\n",
+    "        # 预处理红色通道\n",
+    "        red_data = np.zeros_like(ch, dtype=float)\n",
+    "        alpha_red = np.zeros_like(ch, dtype=float)\n",
+    "        # 设置不同透明度\n",
+    "        red_data[ch > 0] = 1.0  # 红色值\n",
+    "        alpha_red[ch == 1] = 0.6  # 半透明\n",
+    "        alpha_red[ch == 2] = 1.0  # 不透明\n",
+    "        # 绘制红色（使用 RGBA 数组）\n",
+    "        red_rgba = Colors[i](red_data)  # 获取 RGBA 颜色\n",
+    "        red_rgba[..., 3] = alpha_red  # 修改透明度通道\n",
+    "        ax.imshow(red_rgba, aspect='auto', origin='lower')\n",
+    "\n",
+    "    if len(labels) != len(colors):\n",
+    "        return\n",
+    "    legend_elements = [Patch(facecolor=Colors[i](0.8), alpha=0.6, label=labels[i]) for i in range(len(labels))]\n",
+    "    ax.legend(handles=legend_elements, loc='upper right')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,10 +78,20 @@
     "# 读取音频\n",
     "import torchaudio\n",
     "from utils.wavtool import waveInfo\n",
+    "from utils.midiarray import midi2numpy\n",
+    "import os\n",
     "\n",
     "# test_wave_path = \"../data/inferMusic/short mix.wav\"\n",
-    "# test_wave_path = \"../data/inferMusic/three_mix.wav\"\n",
-    "test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
+    "test_wave_path = \"../data/inferMusic/three_mix.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
+    "\n",
+    "# 尝试获取midi\n",
+    "test_midi = test_wave_path.replace(\".wav\", \".mid\")\n",
+    "if os.path.exists(test_midi):\n",
+    "    test_midi = midi2numpy(test_midi, s_per_frame, track_separate=True)\n",
+    "else:\n",
+    "    test_midi = None\n",
+    "\n",
     "info = waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
@@ -62,7 +121,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "N = 2\n",
+    "N = 3\n",
     "# 假设 model 和 test_cqt_data 已经定义\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
@@ -72,8 +131,13 @@
     "    mask = mask.cpu().numpy()[0]    # (84, frame)\n",
     "    onset = onset.cpu().numpy()[0]\n",
     "\n",
+    "if test_midi is not None:\n",
+    "    emb = emb[:, :, :test_midi.shape[2]]  # 截取到和midi一样长\n",
+    "    mask = mask[:, :test_midi.shape[2]]    # 截取到和midi一样长\n",
+    "    onset = onset[:, :test_midi.shape[2]]  # 截取到和midi一样长\n",
+    "\n",
     "# mask大于阈值的数目记为n\n",
-    "positions = np.where(mask > 0.5)\n",
+    "positions = np.where(mask > 0.55)\n",
     "emb_extracted = emb[:, positions[0], positions[1]].T        # (n, 18)\n",
     "\n",
     "# 计算余弦相似度矩阵\n",
@@ -83,15 +147,22 @@
     "spectral = SpectralClustering(n_clusters=N, affinity='precomputed', assign_labels=\"cluster_qr\")\n",
     "labels = spectral.fit_predict(np.exp(similarity_matrix))\n",
     "\n",
-    "sub_figures = N+2\n",
-    "plt.figure(figsize=(12, 5*sub_figures))\n",
+    "pre_figures = 2 + (0 if test_midi is None else 1)\n",
+    "sub_figures = N + pre_figures\n",
     "\n",
-    "plt.subplot(sub_figures, 1, 1)\n",
+    "plt.figure(figsize=(10, 5*sub_figures))\n",
+    "\n",
+    "if test_midi is not None:\n",
+    "    plt.subplot(sub_figures, 1, 1)\n",
+    "    plt.title('midi')\n",
+    "    draw_midi_with_channel(plt.gca(), test_midi, colors=['Reds', 'Blues', 'Greens'], labels=[])\n",
+    "\n",
+    "plt.subplot(sub_figures, 1, pre_figures - 1)\n",
     "plt.title('note')\n",
     "plt.imshow(mask, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
-    "plt.subplot(sub_figures, 1, 2)\n",
+    "plt.subplot(sub_figures, 1, pre_figures)\n",
     "plt.title('onset')\n",
     "plt.imshow(onset, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
@@ -101,7 +172,7 @@
     "    class_i = np.zeros(mask.shape)\n",
     "    class_i[positions[0], positions[1]] = (labels == i).astype(int)\n",
     "    clustered_classes.append(class_i)\n",
-    "    plt.subplot(sub_figures, 1, i+3)\n",
+    "    plt.subplot(sub_figures, 1, i + pre_figures + 1)\n",
     "    plt.title(f'class{i}')\n",
     "    plt.imshow(class_i, aspect='auto', origin='lower', cmap='gray')\n",
     "\n",
