完善分离模型的后处理代码

--- a/septimbre/use_model.ipynb
+++ b/septimbre/use_model.ipynb
@@ -99,7 +99,20 @@
     "if info[\"sample_rate\"] > 44000:\n",
     "    waveform = model.cqt.down2sample(waveform)\n",
     "    print(f\"$ downsampled to {info[\"sample_rate\"]//2}Hz\")\n",
-    "print(waveform.shape)"
+    "print(waveform.shape)\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    emb, mask, onset = model(waveform)\n",
+    "    emb = emb / torch.sqrt(emb.pow(2).sum(dim=1, keepdim=True) + 1e-8)\n",
+    "    emb = emb.cpu().numpy()[0]      # (18, 84, frame)\n",
+    "    mask = mask.cpu().numpy()[0]    # (84, frame)\n",
+    "    onset = onset.cpu().numpy()[0]\n",
+    "\n",
+    "if test_midi is not None:\n",
+    "    emb = emb[:, :, :test_midi.shape[2]]  # 截取到和midi一样长\n",
+    "    mask = mask[:, :test_midi.shape[2]]    # 截取到和midi一样长\n",
+    "    onset = onset[:, :test_midi.shape[2]]  # 截取到和midi一样长"
    ]
   },
   {
@@ -121,20 +134,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "N = 3\n",
-    "# 假设 model 和 test_cqt_data 已经定义\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    emb, mask, onset = model(waveform)\n",
-    "    emb = emb / torch.sqrt(emb.pow(2).sum(dim=1, keepdim=True) + 1e-8)\n",
-    "    emb = emb.cpu().numpy()[0]      # (18, 84, frame)\n",
-    "    mask = mask.cpu().numpy()[0]    # (84, frame)\n",
-    "    onset = onset.cpu().numpy()[0]\n",
-    "\n",
-    "if test_midi is not None:\n",
-    "    emb = emb[:, :, :test_midi.shape[2]]  # 截取到和midi一样长\n",
-    "    mask = mask[:, :test_midi.shape[2]]    # 截取到和midi一样长\n",
-    "    onset = onset[:, :test_midi.shape[2]]  # 截取到和midi一样长\n",
+    "N = 3 if test_midi is None else len(test_midi)  # 聚类数目\n",
     "\n",
     "# mask大于阈值的数目记为n\n",
     "positions = np.where(mask > 0.55)\n",
@@ -175,6 +175,92 @@
     "    plt.subplot(sub_figures, 1, i + pre_figures + 1)\n",
     "    plt.title(f'class{i}')\n",
     "    plt.imshow(class_i, aspect='auto', origin='lower', cmap='gray')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 音符层级的聚类\n",
+    "先获取“音色无关转录”结果，并进行音符创建后处理，然后音符内用softmax平均得到特征"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 必须先获取了转录结果\n",
+    "from sklearn.cluster import SpectralClustering\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from utils.postprocess import output_to_notes_polyphonic\n",
+    "\n",
+    "mask = mask / mask.max()  # 归一化到0-1\n",
+    "onset = onset / onset.max()  # 归一化到0-1\n",
+    "\n",
+    "note_events = output_to_notes_polyphonic(\n",
+    "    mask, onset,\n",
+    "    frame_thresh = 0.4,\n",
+    "    onset_thresh = 0.16,\n",
+    "    neighbor_trick = False,\n",
+    "    midi_offset = 0\n",
+    ")\n",
+    "\n",
+    "embeddings = []\n",
+    "for start, end, f, amp in note_events:\n",
+    "    _mask = mask[f, start:end]  # (end-start, )\n",
+    "    _emb = emb[:, f, start:end] # (18, end-start)\n",
+    "    weight = _mask * _mask\n",
+    "    # weight = np.exp(_mask * _mask)    # 用softmax，稍微强调一下最强的 发现用平方比用一次方好\n",
+    "    weighted_emb = (_emb * weight).sum(axis=1)  # (18, )\n",
+    "    normalized_emb = weighted_emb / np.linalg.norm(weighted_emb)\n",
+    "    embeddings.append(normalized_emb)\n",
+    "\n",
+    "N = 3 if test_midi is None else len(test_midi)  # 聚类数目\n",
+    "\n",
+    "similarity_matrix = cosine_similarity(embeddings)\n",
+    "spectral = SpectralClustering(n_clusters=N, affinity='precomputed', assign_labels=\"cluster_qr\")\n",
+    "labels = spectral.fit_predict(np.exp(similarity_matrix))\n",
+    "\n",
+    "# 画图 如果是两列，一张图大小用(6,3.5)合适，字的大小合适\n",
+    "pre_figures = 2 + (0 if test_midi is None else 1)\n",
+    "sub_figures = N + pre_figures\n",
+    "\n",
+    "plt.figure(figsize=(10, 5*sub_figures))\n",
+    "\n",
+    "if test_midi is not None:\n",
+    "    plt.subplot(sub_figures, 1, 1)\n",
+    "    plt.title('midi')\n",
+    "    draw_midi_with_channel(plt.gca(), test_midi, colors=['Reds', 'Blues', 'Greens'], labels=[])\n",
+    "\n",
+    "plt.subplot(sub_figures, 1, pre_figures - 1)\n",
+    "plt.title('note')\n",
+    "plt.imshow(mask, aspect='auto', origin='lower', cmap='gray')\n",
+    "# plt.colorbar()    # 缩放了不需要了\n",
+    "\n",
+    "plt.subplot(sub_figures, 1, pre_figures)\n",
+    "plt.title('onset')\n",
+    "plt.imshow(onset, aspect='auto', origin='lower', cmap='gray')\n",
+    "# plt.colorbar()\n",
+    "\n",
+    "clustered_classes = []\n",
+    "for i in range(N):\n",
+    "    class_i = np.zeros(mask.shape)\n",
+    "    indices = np.where(labels == i)[0]\n",
+    "    for idx in indices:\n",
+    "        start, end, f, amp = note_events[idx]\n",
+    "        class_i[f, start+1:end] = amp\n",
+    "        class_i[f, start] = 2 * amp # onset\n",
+    "    clustered_classes.append(class_i)\n",
+    "    plt.subplot(sub_figures, 1, i + pre_figures + 1)\n",
+    "    plt.title(f'class{i}')\n",
+    "    plt.imshow(class_i, aspect='auto', origin='lower', cmap='hot')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -239,7 +325,7 @@
    "source": [
     "# 找到 mask 中最大值的位置\n",
     "max_position2 = np.unravel_index(np.argmax(mask2, axis=None), mask.shape)\n",
-    "# 提取对应的 emb 值\n",
+    "# 提取对应的 emb 值 用emb比emb2更好\n",
     "max_emb2 = emb[:, max_position2[0], max_position2[1]]\n",
     "\n",
     "similarity_scores2 = np.tensordot(max_emb2, emb*mask, axes=([0], [0])).reshape(emb.shape[1], emb.shape[2])\n",
@@ -255,6 +341,36 @@
     "plt.colorbar()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(3, 2, figsize=(12, 10), sharex=True, sharey=True)\n",
+    "\n",
+    "axs[0, 0].set_title('1. AMT result')\n",
+    "axs[0, 0].imshow(mask, aspect='auto', origin='lower')\n",
+    "\n",
+    "axs[1, 0].set_title('2. similarity to max')\n",
+    "axs[1, 0].imshow(similarity_scores, aspect='auto', origin='lower')\n",
+    "\n",
+    "axs[2, 0].set_title('3. note binarization')\n",
+    "axs[2, 0].imshow(similarity_scores > 0.3, aspect='auto', origin='lower')\n",
+    "\n",
+    "axs[0, 1].set_title('4. probability correction')\n",
+    "axs[0, 1].imshow(mask2, aspect='auto', origin='lower')\n",
+    "\n",
+    "axs[1, 1].set_title('5. similarity to max')\n",
+    "axs[1, 1].imshow(similarity_scores2, aspect='auto', origin='lower')\n",
+    "\n",
+    "axs[2, 1].set_title('6. note binarization')\n",
+    "axs[2, 1].imshow(similarity_scores2 > 0.3, aspect='auto', origin='lower')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
