补充了layernorm的消融实验

--- a/basicamt/ablation/layernorm/train_basicamt_ln.ipynb
+++ b/basicamt/ablation/layernorm/train_basicamt_ln.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 训练不具备分离能力的网络\n",
-    "basicamt.py"
+    "# ROUND 1\n",
+    "use pre-calculated CQT"
    ]
   },
   {
@@ -70,12 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from basicamt_noDilation import BasicAMT_noDilation\n",
-    "model = BasicAMT_noDilation().to(device)\n",
+    "from basicamt_ln import BasicAMT_LN\n",
+    "model = BasicAMT_LN().to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
     "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.32, patience=2, threshold=1e-3)\n",
-    "checkpoint_path = \"basicamt_noDilation.pth\"\n",
-    "loss_path = \"basicamt_noDilation.loss.txt\"\n",
+    "checkpoint_path = \"basicamt_ln.pth\"\n",
+    "loss_path = \"basicamt_ln.loss.txt\"\n",
     "min_loss = float('inf')\n",
     "epoch_now = 0"
    ]
@@ -126,13 +126,12 @@
     "\n",
     "        onset, note = model(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
-    "        loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
+    "        loss = BasicAMT_LN.loss(onset, note, midi_mixed)\n",
     "        train_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
-    "        model.clampK()\n",
     "\n",
     "    train_loss /= len(dataloader)\n",
     "\n",
@@ -152,7 +151,7 @@
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
     "            onset, note = model(mixed)\n",
-    "            loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
+    "            loss = BasicAMT_LN.loss(onset, note, midi_mixed)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
@@ -171,11 +170,6 @@
     "        f.write(f\"{epoch}:\\ttrain_loss: {train_loss:.4f}\\tval_loss: {val_loss:.4f}\\n\")\n",
     "    epoch_now = epoch"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -260,7 +254,7 @@
     "\n",
     "cqt = CQTsmall_fir(\n",
     "    config=CONFIG.CQT\n",
-    ").to(device)"
+    ").to(device)\n"
    ]
   },
   {
