--- a/evaluate/eval_basicamt_layernorm.ipynb
+++ b/evaluate/eval_basicamt_layernorm.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# \"音色无关转录\"模型评估\n",
+    "使用basicPitch的归一化方法：取log然后batchnorm\n",
     "\n",
     "## 生成转录结果并保存\n",
     "经过process后每个文件夹里的文件只有后缀不同，且后缀为\"npy\" \"wav\" \"mid\"。wav采样率已经是22050Hz。"
@@ -39,9 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_folder_name = \"basicamt\"\n",
-    "sys.path.append(f'../{model_folder_name}')\n",
-    "model = torch.load(f\"../{model_folder_name}/basicamt_model.pth\", weights_only=False)\n",
+    "model_folder_name = \"basicamt_layernorm\"\n",
+    "sys.path.append(f'../basicamt/ablation/layernorm/')\n",
+    "from basicamt.basicamt import BasicAMT_all\n",
+    "torch.serialization.add_safe_globals([BasicAMT_all])\n",
+    "model = torch.load(f\"../basicamt/ablation/layernorm/basicamt_model_ln.pth\", weights_only=False)\n",
     "model.eval()"
    ]
   },
@@ -85,7 +88,7 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\"0.npy\")]\n",
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.5), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.1, 0.6), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
@@ -99,9 +102,9 @@
     "# 看BACH10独奏的结果\n",
     "npyfolder = f\"{model_folder_name}/BACH10_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if not f.endswith(\"0.npy\")]\n",
-    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.4, 0.5), step_num=10, generation=4, log=True)\n",
+    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.4, 0.7), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.1, 0.5), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
@@ -117,7 +120,7 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\".npy\")]\n",
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.02, 0.2), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.13, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.1, 0.6), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
@@ -133,7 +136,7 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\"0.npy\")]\n",
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.5), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.15, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.1, 0.6), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
@@ -147,9 +150,9 @@
     "# 只看URMP的独奏结果\n",
     "npyfolder = f\"{model_folder_name}/URMP_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if not f.endswith(\"0.npy\")]\n",
-    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.26, 0.45), step_num=10, generation=4, log=True)\n",
+    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.2, 0.9), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.15, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.1, 0.6), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
