--- a/basicamt/ablation/layernorm/train_basicamt2_ln.ipynb
+++ b/basicamt/ablation/layernorm/train_basicamt2_ln.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 训练不具备分离能力的网络\n",
-    "basicamt.py"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,29 +31,34 @@
    "source": [
     "from data.septimbre.data import Instruments\n",
     "dataset = Instruments(\n",
-    "    folder = '../../../data/septimbre/piano_large_short_256',\n",
+    "    folder = '../../../data/septimbre/multi_large_256',\n",
     "    mix = 1,\n",
-    "    input = '.cqt.npy',\n",
+    "    input = '.wav',\n",
     "    output = '.npy'\n",
     ")\n",
+    "dataloader = torch.utils.data.DataLoader(dataset, batch_size=18, shuffle=True, pin_memory=True, num_workers=4)\n",
     "print(\"训练集大小: \", len(dataset))\n",
     "input, label = dataset[0]\n",
     "print(\"输入大小: \", input.shape)\n",
     "print(\"输出大小: \", label.shape)\n",
-    "# 如果开了benchmark，batchsize最好一样大，且是两个数据集大小的公因数\n",
-    "dataloader = torch.utils.data.DataLoader(dataset, batch_size=18, shuffle=True, pin_memory=True, num_workers=4)\n",
     "\n",
     "val = Instruments(\n",
-    "    folder = '../../../data/septimbre/piano_medium_short_256',\n",
+    "    folder = '../../../data/septimbre/multi_medium_256',\n",
     "    mix = 1,\n",
-    "    input = '.cqt.npy',\n",
+    "    input = '.wav',\n",
     "    output = '.npy'\n",
     ")\n",
+    "valloader = torch.utils.data.DataLoader(val, batch_size=18, shuffle=False, pin_memory=True, num_workers=4)\n",
     "print(\"测试集大小: \", len(val))\n",
     "input, label = val[0]\n",
     "print(\"输入大小: \", input.shape)\n",
     "print(\"输出大小: \", label.shape)\n",
-    "valloader = torch.utils.data.DataLoader(val, batch_size=18, shuffle=False, pin_memory=True, num_workers=4)"
+    "\n",
+    "# CQT配置\n",
+    "from model.config import CONFIG\n",
+    "s_per_frame = CONFIG.s_per_frame\n",
+    "\n",
+    "_model = None"
    ]
   },
   {
@@ -70,12 +67,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from basicamt_noDilation import BasicAMT_noDilation\n",
-    "model = BasicAMT_noDilation().to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.32, patience=2, threshold=1e-3)\n",
-    "checkpoint_path = \"basicamt_noDilation.pth\"\n",
-    "loss_path = \"basicamt_noDilation.loss.txt\"\n",
+    "# 从分体开始\n",
+    "from basicamt_ln import BasicAMT_LN, BasicAMT_all_LN\n",
+    "_model = BasicAMT_LN().to(device)\n",
+    "optimizer = torch.optim.AdamW(_model.parameters(), lr=2e-4)\n",
+    "checkpoint_path = \"basicamt_ln.pth\"\n",
+    "\n",
+    "# 加载最佳模型\n",
+    "states = load_ckpt(_model, optimizer, \"best_\" + checkpoint_path)\n",
+    "if not states:\n",
+    "    print(\"No best checkpoint loaded.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from basicamt_ln import BasicAMT_LN, BasicAMT_all_LN\n",
+    "if _model is not None:\n",
+    "    model = BasicAMT_all_LN(CONFIG.CQT, _model.state_dict(), CQTlearnable=False).to(device)\n",
+    "    print(\"model initialized from BasicAMT\")\n",
+    "else:\n",
+    "    model = BasicAMT_all_LN(CONFIG.CQT, CQTlearnable=False).to(device)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "checkpoint_path = \"basicamt_all_ln.pth\"\n",
+    "loss_path = \"basicamt_all_ln.loss.txt\"\n",
     "min_loss = float('inf')\n",
     "epoch_now = 0"
    ]
@@ -100,8 +119,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = torch.compile(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "epoch_total = 50\n",
-    "stage_save_interval = 45    # save checkpoint every $stage_save_interval$ epochs\n",
+    "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
@@ -121,18 +149,17 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.01   # 加入噪声 经过听觉和可视化觉得0.01是一个合适的值\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.005   # 加入噪声 经过听觉和可视化觉得0.005是一个合适的值\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
     "        onset, note = model(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
-    "        loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
+    "        loss = BasicAMT_LN.loss(onset, note, midi_mixed)\n",
     "        train_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
-    "        model.clampK()\n",
     "\n",
     "    train_loss /= len(dataloader)\n",
     "\n",
@@ -152,7 +179,7 @@
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
     "            onset, note = model(mixed)\n",
-    "            loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
+    "            loss = BasicAMT_LN.loss(onset, note, midi_mixed)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
@@ -173,9 +200,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "model.cqt.cqt_kernels.requires_grad"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,39 +283,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CQT配置\n",
-    "from model.config import CONFIG\n",
-    "s_per_frame = CONFIG.s_per_frame\n",
-    "\n",
-    "from model.CQT import CQTsmall_fir\n",
-    "\n",
-    "cqt = CQTsmall_fir(\n",
-    "    config=CONFIG.CQT\n",
-    ").to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 读取音频，分析为CQT\n",
+    "# 读取音频\n",
     "import torchaudio\n",
-    "from utils.midiarray import numpy2midi\n",
+    "from utils.midiarray import midi2numpy\n",
     "from utils.wavtool import waveInfo\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "test_wave_path = \"../../../data/inferMusic/piano_short.wav\"\n",
-    "# test_wave_path = r'C:\\amt\\data\\septimbre\\small\\inst0\\0.wav'\n",
+    "# test_wave_path = \"../../../data/inferMusic/piano_short.wav\"\n",
+    "test_wave_path = \"../../../data/inferMusic/孤独な巡礼simple.wav\"\n",
     "waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
     "waveform = waveform.unsqueeze(0)\n",
     "print(waveform.shape)\n",
-    "test_cqt_data = cqt(waveform).to(device)\n",
-    "print(test_cqt_data.shape)"
+    "\n",
+    "test_midi_path = test_wave_path.replace('.wav', '.mid')\n",
+    "s_per_frame = 256 / 22050\n",
+    "midi_array = midi2numpy(test_midi_path, s_per_frame)\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.imshow(midi_array, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "plt.title('MIDI Array')\n",
+    "plt.xlabel('Time Frames')\n",
+    "plt.ylabel('MIDI Notes')\n",
+    "plt.show()\n",
+    "print(midi_array.shape)"
    ]
   },
   {
@@ -295,10 +319,10 @@
    "source": [
     "model.eval()\n",
     "with torch.no_grad():\n",
-    "    onset, note = model(test_cqt_data)\n",
+    "    onset, note = model(waveform)\n",
     "    onset = onset.cpu().numpy()[0]\n",
     "    note = note.cpu().numpy()[0]\n",
-    "    plt.figure(figsize=(12, 10))\n",
+    "    plt.figure(figsize=(12, 12))\n",
     "\n",
     "    plt.subplot(2, 1, 1)\n",
     "    plt.title('Note')\n",
@@ -312,6 +336,16 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final model to be used by others\n",
+    "torch.save(model, \"basicamt_model_ln.pth\")"
    ]
   }
  ],
