--- a/basicamt/train_basicamt.ipynb
+++ b/basicamt/train_basicamt.ipynb
@@ -37,6 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = torch.device(\"cuda:1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from data.septimbre.data import Instruments\n",
     "dataset = Instruments(\n",
     "    folder = '../data/septimbre/piano_large_short_256',\n",
