--- a/basicamt/train_basicamt2.ipynb
+++ b/basicamt/train_basicamt2.ipynb
@@ -23,7 +23,7 @@
     "from utils.checkpoint import save_ckpt_template as save_ckpt, load_ckpt_template as load_ckpt\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda')\n",
+    "    device = torch.device('cuda:1')\n",
     "    torch.backends.cudnn.benchmark = True   # 加速卷积计算\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
