--- a/data/septimbre/make_basicamt.ipynb
+++ b/data/septimbre/make_basicamt.ipynb
@@ -352,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
