--- a/evaluate/eval_basicamt_BCE.ipynb
+++ b/evaluate/eval_basicamt_BCE.ipynb
@@ -182,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
