--- a/evaluate/eval_basicpitch.ipynb
+++ b/evaluate/eval_basicpitch.ipynb
@@ -180,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
